# scuffle

./: .editorconfig  .git-blame-ignore-revs  .gitignore  CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.AGPL-3.0  LICENSE.Apache-2.0  LICENSE.MIT  README.md  codecov.yml  deny.toml  release-plz.toml  rustfmt.toml
apps/image-processor/: Cargo.toml  Dockerfile  LICENSE.AGPL-3.0  README.md
apps/image-processor/examples/: Cargo.toml
apps/image-processor/examples/src/: enroll.rs
apps/image-processor/proto/: Cargo.toml  README.md
apps/image-processor/src/: database.rs
apps/image-processor/src/event_queue/: redis.rs
apps/image-processor/src/management/: grpc.rs  http.rs  mod.rs  validation.rs
crates/aac/: CHANGELOG.md  Cargo.toml  README.md
crates/aac/src/: config.rs  lib.rs  tests.rs
crates/amf0/: CHANGELOG.md  Cargo.toml  README.md
crates/amf0/src/: decode.rs  define.rs  encode.rs  errors.rs  lib.rs  reader.rs  tests.rs  writer.rs
crates/av1/: CHANGELOG.md  Cargo.toml  README.md
crates/av1/src/: config.rs  lib.rs  tests.rs
crates/av1/src/obu/: mod.rs  seq.rs  utils.rs
crates/batching/: CHANGELOG.md  Cargo.toml  README.md
crates/batching/benchmarks/: batcher.rs  dataloader.rs
crates/batching/examples/: Cargo.toml  README.md
crates/batching/src/: batch.rs  dataloader.rs  lib.rs
crates/bootstrap/: CHANGELOG.md  Cargo.toml  README.md
crates/bootstrap/derive/: CHANGELOG.md  Cargo.toml  README.md
crates/bootstrap/derive/src/: lib.rs  main_impl.rs  service_impl.rs
crates/bootstrap/examples/: Cargo.toml  README.md
crates/bootstrap/examples/src/: basic.rs  cli.rs  tracing.rs
crates/bootstrap/src/: config.rs  global.rs  lib.rs  service.rs
crates/bootstrap/src/snapshots/: scuffle_bootstrap__tests__main_test.snap  scuffle_bootstrap__tests__main_test_custom_service.snap
crates/bootstrap/telemetry/: Cargo.toml  README.md
crates/bootstrap/telemetry/src/: lib.rs  opentelemetry.rs
crates/bytes-util/: CHANGELOG.md  Cargo.toml  README.md
crates/bytes-util/src/: bit_read.rs  bit_write.rs  bytes_cursor.rs  lib.rs
crates/bytesio/: Cargo.toml
crates/bytesio/src/: bit_reader.rs  bytes_reader.rs  bytes_writer.rs  bytesio.rs  lib.rs
crates/bytesio/src/tests/: bit_writer.rs  bytes_reader.rs  bytes_writer.rs  bytesio.rs  errors.rs  mod.rs
crates/context/: CHANGELOG.md  Cargo.toml  README.md
crates/context/src/: ext.rs  lib.rs
crates/expgolomb/: CHANGELOG.md  Cargo.toml  README.md
crates/expgolomb/src/: lib.rs
crates/ffmpeg/: CHANGELOG.md  Cargo.toml  README.md
crates/ffmpeg/src/: codec.rs  consts.rs  decoder.rs  dict.rs  encoder.rs  error.rs  filter_graph.rs  frame.rs  lib.rs  limiter.rs  log.rs  packet.rs  rational.rs  scalar.rs  scaler.rs  smart_object.rs  stream.rs  utils.rs
crates/ffmpeg/src/enums/: av_channel_order.rs  av_codec_id.rs  av_dict_flags.rs  av_discard.rs  av_fmt_flags.rs  av_io_flag.rs  av_media_type.rs  av_picture_type.rs  av_picure_type.rs  av_pixel_format.rs  av_pkt_flags.rs  av_rounding.rs  av_sample_format.rs  av_seek.rs  mod.rs
crates/ffmpeg/src/io/: channel.rs  input.rs  internal.rs  mod.rs  output.rs
crates/ffmpeg/src/snapshots/: scuffle_ffmpeg__decoder__tests__test_decoder_audio.snap  scuffle_ffmpeg__decoder__tests__test_decoder_video.snap  scuffle_ffmpeg__encoder__tests__test_encoder_encode_video.snap
crates/flv/: CHANGELOG.md  Cargo.toml  LICENSE.MIT  README.md
crates/flv/src/: aac.rs  audio.rs  av1.rs  avc.rs  define.rs  errors.rs  file.rs  flv.rs  header.rs  hevc.rs  lib.rs  macros.rs  script.rs  tag.rs  video.rs
crates/flv/src/tests/: demuxer.rs  error.rs
crates/future-ext/: CHANGELOG.md  Cargo.toml  README.md
crates/future-ext/src/: lib.rs
crates/h264/: CHANGELOG.md  Cargo.toml  README.md
crates/h264/src/: config.rs  sps.rs  tests.rs
crates/h265/: CHANGELOG.md  Cargo.toml  README.md
crates/h265/src/: config.rs  sps.rs  tests.rs
crates/h3-webtransport/: CHANGELOG.md  Cargo.toml  README.md
crates/h3-webtransport/src/: lib.rs  server.rs  session.rs  stream.rs
crates/http/: CHANGELOG.md  Cargo.toml  README.md
crates/http/examples/: Cargo.toml  README.md
crates/http/examples/src/: tcp.rs
crates/http/src/: body.rs  builder.rs  error.rs  lib.rs  util.rs
crates/http/src/backend/: mod.rs
crates/http/src/svc/: axum.rs  function.rs  mod.rs  tower.rs
crates/metrics/: Cargo.toml  README.md
crates/metrics/derive/: CHANGELOG.md  Cargo.toml  README.md
crates/metrics/derive/src/: enum_impl.rs  lib.rs  metrics_impl.rs
crates/metrics/examples/: Cargo.toml  README.md
crates/metrics/examples/src/: derive.rs  prometheus.rs
crates/metrics/src/: collector.rs  lib.rs  value.rs
crates/metrics/src/prometheus/: mod.rs
crates/metrics/src/snapshots/: scuffle_metrics__tests__derive_enum.snap
crates/mp4/: CHANGELOG.md  Cargo.toml  README.md
crates/mp4/src/: codec.rs
crates/mp4/src/boxes/: header.rs  macros.rs
crates/mp4/src/tests/: demux.rs
crates/nutype_enum/: CHANGELOG.md  Cargo.toml  README.md
crates/nutype_enum/src/: lib.rs
crates/postcompile/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/postcompile/src/: deps.rs  features.rs  lib.rs
crates/postcompile/src/snapshots/: postcompile__tests__compile_failure.snap  postcompile__tests__compile_success.snap
crates/pprof/: CHANGELOG.md  Cargo.toml  LICENSE.Apache-2.0  README.md
crates/pprof/examples/: Cargo.toml  README.md
crates/pprof/examples/src/: cpu.rs
crates/pprof/src/: cpu.rs  lib.rs
crates/rtmp/: CHANGELOG.md  Cargo.toml  README.md
crates/rtmp/src/chunk/: decoder.rs  define.rs  (+2 more)
crates/settings/: CHANGELOG.md  Cargo.toml  README.md
crates/settings/assets/: templates.toml  test.toml
crates/settings/examples/: Cargo.toml  README.md
crates/settings/src/: lib.rs  options.rs
crates/signal/: CHANGELOG.md  Cargo.toml  README.md
crates/signal/src/: bootstrap.rs  lib.rs
crates/transmuxer/: CHANGELOG.md  Cargo.toml  README.md
crates/transmuxer/src/: define.rs  errors.rs  lib.rs
dev-tools/xtask/: Cargo.toml
dev-tools/xtask/src/: main.rs  utils.rs
(+179 files in other folders)
