[workspace]

members = [
    "crates/aac",
    "crates/amf0",
    "crates/av1",
    "crates/batching",
    "crates/batching/examples",
    "crates/bootstrap",
    "crates/bootstrap/derive",
    "crates/bootstrap/examples",
    "crates/bootstrap/telemetry",
    "crates/bytes-util",
    "crates/context",
    "crates/expgolomb",
    "crates/ffmpeg",
    "crates/flv",
    "crates/future-ext",
    "crates/h3-webtransport",
    "crates/h264",
    "crates/h265",
    "crates/http",
    "crates/http/examples",
    "crates/metrics",
    "crates/metrics/derive",
    "crates/metrics/examples",
    "crates/mp4",
    "crates/postcompile",
    "crates/pprof",
    "crates/pprof/examples",
    "crates/rtmp",
    "crates/settings",
    "crates/settings/examples",
    "crates/signal",
    "crates/transmuxer",
    "crates/workspace-hack",
    "dev-tools/xtask",
    "crates/nutype_enum",
]

resolver = "2"

[workspace.dependencies]
scuffle-aac = { path = "crates/aac", version = "0.1.0" }
scuffle-amf0 = { path = "crates/amf0", version = "0.1.0" }
scuffle-av1 = { path = "crates/av1", version = "0.1.0" }
scuffle-batching = { path = "crates/batching", version = "0.1.0" }
scuffle-bootstrap = { path = "crates/bootstrap", version = "0.1.0" }
scuffle-bootstrap-derive = { path = "crates/bootstrap/derive", version = "0.1.0" }
scuffle-bootstrap-telemetry = { path = "crates/bootstrap/telemetry", version = "0.1.0" }
scuffle-bytes-util = { path = "crates/bytes-util", version = "0.1.0" }
scuffle-context = { path = "crates/context", version = "0.1.0" }
scuffle-expgolomb = { path = "crates/expgolomb", version = "0.1.0" }
scuffle-ffmpeg = { path = "crates/ffmpeg", version = "0.1.0" }
scuffle-flv = { path = "crates/flv", version = "0.1.0" }
scuffle-future-ext = { path = "crates/future-ext", version = "0.1.0" }
scuffle-h3-webtransport = { path = "crates/h3-webtransport", version = "0.1.0" }
scuffle-http = { path = "crates/http", version = "0.1.0" }
scuffle-metrics = { path = "crates/metrics", version = "0.1.0" }
scuffle-metrics-derive = { path = "crates/metrics/derive", version = "0.1.0" }
postcompile = { path = "crates/postcompile", version = "0.1.0" }
scuffle-pprof = { path = "crates/pprof", version = "0.1.0" }
scuffle-settings = { path = "crates/settings", version = "0.1.0" }
scuffle-signal = { path = "crates/signal", version = "0.2.0" }
nutype-enum = { path = "crates/nutype_enum", version = "0.1.0" }
scuffle-h264 = { path = "crates/h264", version = "0.1.0" }
scuffle-h265 = { path = "crates/h265", version = "0.1.0" }
scuffle-mp4 = { path = "crates/mp4", version = "0.1.0" }
scuffle-rtmp = { path = "crates/rtmp", version = "0.1.0" }
scuffle-transmuxer = { path = "crates/transmuxer", version = "0.1.0" }
scuffle-workspace-hack = { version = "0.1.0" }

[profile.release-debug]
inherits = "release"
debug = true

[patch.crates-io.scuffle-workspace-hack]
path = "crates/workspace-hack"
