[package]
name = "scuffle-aac"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate for decoding AAC audio headers."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-aac"
keywords = ["aac", "audio", "codec"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = "1.5"
byteorder = "1.5"
num-traits = "0.2"
num-derive = "0.4"
scuffle-workspace-hack.workspace = true
scuffle-bytes-util.workspace = true
