[package]
name = "scuffle-amf0"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A pure-rust implementation of AMF0 encoder and decoder."
repository = "https://github.com/scufflecloud/scuffle"
keywords = ["amf0", "rtmp", "flash", "video", "flv"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = "1.5"
byteorder = "1.5"
num-traits = "0.2"
num-derive = "0.4"
scuffle-bytes-util.workspace = true
thiserror = "2.0"
scuffle-workspace-hack.workspace = true
