[package]
name = "scuffle-bootstrap"
version = "0.0.1"
edition = "2021"
description = "A utility crate for creating binaries."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-bootstrap"
license = "MIT OR Apache-2.0"
keywords = ["bootstrap", "binary", "cli", "config"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pin-project-lite = "0.2"

scuffle-context = { version = "0.0.1", path = "../context" }
scuffle-bootstrap-derive = { version = "0.0.1", path = "./derive" }

[features]
default = []
