[package]
name = "scuffle-bootstrap"
version = "0.1.0"
edition = "2021"
description = "A utility crate for creating binaries."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-bootstrap"
license = "MIT OR Apache-2.0"
keywords = ["bootstrap", "binary", "cli", "config"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pin-project-lite = "0.2"

scuffle-context.workspace = true
scuffle-bootstrap-derive.workspace = true
scuffle-workspace-hack.workspace = true

[dev-dependencies]
insta = "1.42"
postcompile = { workspace = true, features = ["prettyplease"] }
scuffle-future-ext.workspace = true
scuffle-signal = { workspace = true, features = ["bootstrap"] }
