[package]
name = "scuffle-bytes-util"
version = "0.1.0"
edition = "2021"
description = "A utility crate for working with bytes."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-bytes-util"
license = "MIT OR Apache-2.0"
keywords = ["bytes", "util"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = "1.5"
scuffle-workspace-hack.workspace = true
