[package]
name = "scuffle-ffmpeg"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-ffmpeg"
license = "MIT OR Apache-2.0"
description = "FFmpeg bindings for Rust."
keywords = ["ffmpeg", "video", "audio", "media"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
libc = "0.2"
bytes = { optional = true, version = "1" }
tokio = { optional = true, version = "1", features = ["sync"]}
crossbeam-channel = { optional = true, version = "0.5.13" }
tracing = { optional = true, version = "0.1" }
arc-swap = { version = "1.7" }
ffmpeg-sys-next = { version = "7.1.0" }
scuffle-workspace-hack.workspace = true
nutype-enum.workspace = true
rand = "0.8"
bon = "3.3.2"
thiserror = "2.0"

[dev-dependencies]
insta = {version = "1.42", features = ["filters"]}
ffmpeg-sys-next = { version = "7.1.0", features = ["build-lib-x264", "build-license-gpl"]}
tempfile = "3.15"
tracing-test = "0.2"
tracing-subscriber = "0.3"
scuffle-mp4.workspace = true
sha2 = "0.10"
bytes = "1"

[features]
channel = ["dep:bytes"]
tokio-channel = ["channel", "dep:tokio"]
crossbeam-channel = ["channel", "dep:crossbeam-channel"]
tracing = ["dep:tracing"]
build = ["ffmpeg-sys-next/build"]

[package.metadata.xtask]
# Note: build is not an additive feature because it changes the build.rs and therefore
# requires a full rebuild of the crate.
additive-features = [
    "channel",
    "tokio-channel",
    "crossbeam-channel",
    "tracing",
]
