[package]
name = "scuffle-ffmpeg"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-ffmpeg"
license = "MIT OR Apache-2.0"
description = "FFmpeg bindings for Rust."
keywords = ["ffmpeg", "video", "audio", "media"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
libc = "0.2"
bytes = { optional = true, version = "1" }
tokio = { optional = true, version = "1", features = ["sync"]}
crossbeam-channel = { optional = true, version = "0.5.13" }
tracing = { optional = true, version = "0.1" }
arc-swap = { version = "1.7" }
rusty_ffmpeg = "0.16.1"
scuffle-workspace-hack.workspace = true
nutype-enum.workspace = true
rand = "0.8"
bon = "3.3.2"
thiserror = "2.0"

[dev-dependencies]
insta = {version = "1.42", features = ["filters"]}
tempfile = "3.15"
tracing-test = "0.2"
tracing-subscriber = "0.3"
scuffle-mp4.workspace = true
sha2 = "0.10"
bytes = "1"

[features]
channel = ["dep:bytes"]
tokio-channel = ["channel", "dep:tokio"]
crossbeam-channel = ["channel", "dep:crossbeam-channel"]
tracing = ["dep:tracing"]
link_system_ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
link_vcpkg_ffmpeg = ["rusty_ffmpeg/link_vcpkg_ffmpeg"]
default = ["link_system_ffmpeg"]

[package.metadata.xtask]
# Note: `link_system_ffmpeg` nor `link_vcpkg_ffmpeg` are additive features because
# they change the build.rs and therefore require a full rebuild of the crate.
additive-features = [
    "channel",
    "tokio-channel",
    "crossbeam-channel",
    "tracing",
]

always_include_features = [
    "link_system_ffmpeg",
]

[package.metadata.docs.rs]
features = ["channel", "tokio-channel", "crossbeam-channel", "tracing"]
rustdoc-args = ["--cfg", "docsrs"]
