[package]
name = "flv"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.5"
bytes = "1.5"
num-traits = "0.2"
num-derive = "0.4"

scuffle-av1.workspace = true
h264 = { path = "../h264" }
h265 = { path = "../h265" }
scuffle-aac = { path = "../aac" }
scuffle-bytes-util.workspace = true
scuffle-amf0.workspace = true
scuffle-workspace-hack.workspace = true
