[package]
name = "scuffle-flv"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-flv"
description = "A pure Rust FLV demuxer."
keywords = ["flv", "demuxer"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
byteorder = "1.5"
bytes = "1.5"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0"

scuffle-h264.workspace = true
scuffle-h265.workspace = true
scuffle-aac.workspace = true
scuffle-bytes-util.workspace = true
scuffle-av1.workspace = true
scuffle-amf0.workspace = true
nutype-enum.workspace = true
scuffle-workspace-hack.workspace = true
