[package]
name = "scuffle-future-ext"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A utility crate for working with futures."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-future-ext"
keywords = ["future", "async", "await"]

[dependencies]
tokio = { version = "1", features = ["time"] }
scuffle-workspace-hack.workspace = true
