[package]
name = "scuffle-h264"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A pure Rust H.264 header decoder."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-h264"
keywords = ["h264", "video", "codec"]

[dependencies]
bytes = "1.5"
byteorder = "1.5"
scuffle-expgolomb.workspace = true
scuffle-bytes-util.workspace = true
scuffle-workspace-hack.workspace = true
