[package]
name = "scuffle-http"
version = "0.0.5"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-http"
license = "MIT OR Apache-2.0"
description = "A high-performance HTTP server supporting HTTP/1.1, HTTP/2, and HTTP/3."
keywords = ["http", "server", "http1", "http2", "http3"]

[dependencies]
tokio = { version = "1", features = ["net", "sync", "time", "rt"], default-features = false }
http = { version = "1" }
http-body = { version = "1" }
pin-project-lite = { version = "0.2" }
thiserror = { version = "2.0.0" }
derive_more = { version = "1.0.0", features = ["debug", "from"] }
futures = { version = "0.3" }
bytes = { version = "1" }
libc = { version = "0.2" }
httpdate = { version = "1" }
itoa = { version = "1" }
smallvec = { version = "1" }
spin = { version = "0.9" }
async-trait = { version = "0.1" }
scuffle-future-ext.workspace = true
# For extra services features
tower-service = { version = "0.3", optional = true }
axum-core = { version = "0.4", optional = true }

# for tls-rustls features
rustls = { version = "0.23", optional = true }
# for tls-rustls-pem features
rustls-pemfile = { version = "2.2", optional = true }
tokio-rustls = { version = "0.26", optional = true }

# For tracing features
tracing = { version = "0.1", optional = true }

# For http3 features
h3 = { version = "0", optional = true }
scuffle-h3-webtransport = { workspace = true, optional = true }

# For http3-quinn features
h3-quinn = { version = "0", optional = true }
quinn = { version = "0.11", optional = true }

hyper = { version = "1.5.1", optional = true, features = ["server"] } # http1, http2
hyper-util = { version = "0.1.10", optional = true, features = ["server", "tokio"] } # http1, http2

scuffle-context.workspace = true
scuffle-workspace-hack.workspace = true

[features]
error-backtrace = []

http1 = [
    "hyper/http1",
    "hyper-util/http1",
]

http2 = [
    "hyper/http2",
    "hyper-util/http2",
]

http3 = [
    "h3",
    "quic-quinn",
]

http3-webtransport = [
    "http3",
    "quic-quinn",
    "scuffle-h3-webtransport",
]

# Quinn is a quic backend for http3
quic-quinn = [
    "http3",
    "h3-quinn",
    "quinn",
]

tls-rustls = [
    "rustls",
    "tokio-rustls",
]

tls-rustls-pem = [
    "tls-rustls",
    "rustls-pemfile",
]

tracing = [
    "dep:tracing",
]

tower = [
    "dep:tower-service",
]

axum = [
    "dep:axum-core",
    "tower",
]

http3-default = [
    "http3",
    "quic-quinn",
    "tls-rustls",
]

default = [
    "http1",
    "http2",
    "tracing",
]

[package.metadata.xtask]
additive-features = [
    "error-backtrace",
    "http1",
    "http2",
    "http3",
    "http3-webtransport",
    "quic-quinn",
    "tls-rustls",
    "tls-rustls-pem",
    "tracing",
    "tower",
    "axum",
    "http3-default",
    "default",
]
