[package]
name = "scuffle-pprof"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-pprof"
license = "MIT OR Apache-2.0"
description = "Helper crate for adding pprof support to your application."
keywords = ["pprof", "cpu", "profiling", "flamegraphs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
flate2 = "1.0"
pprof = { version = "0.14", features = ["prost-codec"] }
thiserror = "2"
scuffle-workspace-hack.workspace = true
