[package]
name = "scuffle-rtmp"
version = "0.1.0"
edition = "2021"
description = "A pure Rust RTMP server"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-rtmp"
license = "MIT OR Apache-2.0"
keywords = ["rtmp", "server", "streaming"]

[dependencies]
byteorder = "1.5"
bytes = "1.5"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num-traits = "0.2"
num-derive = "0.4"
tokio = { version = "1.36", features = ["io-util", "sync"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"

scuffle-amf0.workspace = true
scuffle-workspace-hack.workspace = true
scuffle-bytes-util.workspace = true
scuffle-future-ext.workspace = true

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
